--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4408,7 +4408,7 @@ button {
       .event-section .tab-content .event-item2 .event-content .event-title .title {
         margin: 0px;
         font-weight: 900;
-        color: #333333;
+        color: red;
         font-size: 24px; }
     .event-section .tab-content .event-item2 .event-content .event-post-meta ul li {
       margin-bottom: 5px;
@@ -4870,8 +4870,6 @@ button {
   .upcomming-event-section2 .comming-event-item .event-content {
     padding-right: 70px; }
     .upcomming-event-section2 .comming-event-item .event-content .event-title {
-      margin-bottom: 15px;
-      padding-bottom: 15px;
       border-bottom: 1px solid #f0f0f0; }
       .upcomming-event-section2 .comming-event-item .event-content .event-title .tag {
         font-weight: 900;
@@ -4882,6 +4880,7 @@ button {
           color: #ffbe30; }
       .upcomming-event-section2 .comming-event-item .event-content .event-title .title-text {
         font-weight: 400;
+        padding-bottom: 15px;
         font-size: 30px; }
         .upcomming-event-section2 .comming-event-item .event-content .event-title .title-text strong {
           font-weight: 900; }
@@ -5287,7 +5286,10 @@ button {
         font-weight: 900; }
     .upcomming-event-section3 .comming-event-item .event-content .event-title .sub-title {
       font-weight: 700;
-      color: #ffbe30; }
+      color: red; }
+      .subb{
+        color: red;
+      }
   .upcomming-event-section3 .comming-event-item .event-content .event-info-list ul li {
     margin-bottom: 5px; }
     .upcomming-event-section3 .comming-event-item .event-content .event-info-list ul li:last-child {
