--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,16 +467,16 @@ textarea {
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
     .backtotop .scroll:before {
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#ed1c24), to(#ff666b));
+      background: -webkit-linear-gradient(top left, #ed1c24, #ff666b);
+      background: -o-linear-gradient(top left, #ed1c24, #ff666b);
+      background: linear-gradient(to bottom right, #ed1c24, #ff666b); }
     .backtotop .scroll:after {
       opacity: 0;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ffbe30), to(#ff3e00));
-      background: -webkit-linear-gradient(top left, #ffbe30, #ff3e00);
-      background: -o-linear-gradient(top left, #ffbe30, #ff3e00);
-      background: linear-gradient(to bottom right, #ffbe30, #ff3e00); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#ff666b), to(#ed1c24));
+      background: -webkit-linear-gradient(top left, #ff666b, #ed1c24);
+      background: -o-linear-gradient(top left, #ff666b, #ed1c24);
+      background: linear-gradient(to bottom right, #ff666b, #ed1c24); }
     .backtotop .scroll:hover:before {
       opacity: 0; }
     .backtotop .scroll:hover:after {
@@ -1439,7 +1439,7 @@ button {
   .header-altranative .alt-menu-btn {
     padding: 0px;
     line-height: normal;
-    color: #ffbe30;
+    color: #ed1c24;
     font-size: 30px; }
 
 .sidebar-menu-wrapper {
@@ -1475,7 +1475,7 @@ button {
       right: 5px;
       width: 40px;
       height: 40px;
-      color: #ffc107;
+      color: #ed1c24;
       font-size: 18px;
       cursor: pointer;
       line-height: 40px;
@@ -1564,7 +1564,7 @@ button {
               text-align: center;
               border-radius: 100%;
               color: #ffffff;
-              background-color: #ffbe30; }
+              background-color: #ed1c24; }
           .sidebar-menu-wrapper .sidebar .menu-link-list ul li:hover a {
             background-color: rgba(51, 51, 51, 0.5); }
         .sidebar-menu-wrapper .sidebar .menu-link-list ul .active a {
@@ -1603,7 +1603,7 @@ button {
           margin-bottom: 0px; }
         .sidebar-menu-wrapper .sidebar .social-links .contact-info i {
           margin-right: 10px;
-          color: #ffbe30; }
+          color: #ed1c24; }
       .sidebar-menu-wrapper .sidebar .social-links ul {
         margin: 0px;
         display: table;
@@ -1630,7 +1630,7 @@ button {
             background-color: rgba(255, 255, 255, 0.1); }
           .sidebar-menu-wrapper .sidebar .social-links ul li:hover a {
             color: #ffffff;
-            background-color: #ffbe30; }
+            background-color: #ed1c24; }
       .sidebar-menu-wrapper .sidebar .social-links .contact-btn {
         height: 40px;
         margin: 0px 15px;
@@ -1638,13 +1638,13 @@ button {
         line-height: 40px;
         text-align: center;
         border-radius: 30px;
-        color: #ffbe30;
+        color: #ffffff;
         font-size: 14px;
         text-transform: uppercase;
         background-color: #333333; }
         .sidebar-menu-wrapper .sidebar .social-links .contact-btn:hover {
           color: #ffffff;
-          background-color: #ffbe30; }
+          background-color: #ed1c24; }
   .sidebar-menu-wrapper .sidebar.active {
     left: 0px; }
     .sidebar-menu-wrapper .sidebar.active .overlay {
@@ -5832,10 +5832,10 @@ button {
       text-align: center;
       position: absolute;
       color: #ffffff;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6); }
       .event-section .event-list-item .event-image .post-date .date {
         font-weight: 900;
         font-size: 24px;
@@ -5856,7 +5856,7 @@ button {
         content: '';
         height: 100%;
         position: absolute;
-        background-color: #ffbe30; }
+        background-color: #1272c1; }
       .event-section .event-list-item .event-content .event-title .title {
         margin: 0px;
         font-weight: 400;
@@ -5907,10 +5907,10 @@ button {
         content: '';
         position: absolute;
         border-radius: 30px;
-        background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-        background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+        background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+        background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+        background: -o-linear-gradient(top left, #1272c1, #015ba6);
+        background: linear-gradient(to bottom right, #1272c1, #015ba6);
         -webkit-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out; }
@@ -5920,7 +5920,7 @@ button {
         .event-section .event-list-item .event-content .tickets-details-btn:hover:before {
           opacity: 1; }
   .event-section .event-list-item:hover {
-    border-color: #ffbe30; }
+    border-color: #015ba6; }
 
 .event-section .event-grid-item {
   margin-bottom: 30px;
@@ -5943,10 +5943,10 @@ button {
       text-align: center;
       position: absolute;
       color: #ffffff;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6); }
       .event-section .event-grid-item .event-image .post-date .date {
         font-weight: 900;
         font-size: 24px;
@@ -5967,7 +5967,7 @@ button {
         content: '';
         height: 100%;
         position: absolute;
-        background-color: #ffbe30; }
+        background-color: #1272c1; }
       .event-section .event-grid-item .event-content .event-title .title {
         font-weight: 700;
         font-size: 24px; }
@@ -6007,10 +6007,10 @@ button {
       content: '';
       position: absolute;
       border-radius: 30px;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6);
       -webkit-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
