--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
   max-width: 1200px; }
 
 a {
-  color: #ffbe30; }
+  color: #ed1c24; }
 
 a,
 button {
@@ -84,7 +84,7 @@ strong {
 
 a:hover {
   text-decoration: none;
-  color: #ff3e00; }
+  color: #1272c1; }
 
 button:focus,
 select:focus {
@@ -507,10 +507,10 @@ textarea {
   bottom: 0;
   opacity: 0;
   position: absolute;
-  background: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 62, 0, 0.8)), to(rgba(255, 190, 48, 0.8)));
-  background: -webkit-linear-gradient(top left, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8));
-  background: -o-linear-gradient(top left, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8));
-  background: linear-gradient(to bottom right, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8)); }
+  background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ca636));
+  background: -webkit-linear-gradient(top left, #1272c1, #015ca636);
+  background: -o-linear-gradient(top left, #1272c1, #015ca636);
+  background: linear-gradient(to bottom right, #1272c1, #015ca636); }
   .plus-effect:before, .plus-effect:after {
     top: 50%;
     left: 50%;
@@ -774,9 +774,9 @@ button {
             text-transform: capitalize;
             color: rgba(255, 255, 255, 0.5); }
           .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children .sub-menu > li .active {
-            color: #ffbe30; }
+            color: red }
           .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children .sub-menu > li:hover > a {
-            color: #ffbe30; }
+            color: red; }
       .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children:hover .sub-menu {
         opacity: 1;
         visibility: visible; }
@@ -794,7 +794,7 @@ button {
             .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children > .sub-menu > .menu-item-has-children > .sub-menu > li a {
               position: relative; }
             .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children > .sub-menu > .menu-item-has-children > .sub-menu > li:hover a {
-              color: #ffbe30; }
+              color: red; }
         .default-header-section .header-bottom .menu-item-list > ul > .menu-item-has-children > .sub-menu > .menu-item-has-children:hover > .sub-menu {
           opacity: 1;
           visibility: visible; }
@@ -2338,13 +2338,13 @@ button {
         -ms-transform: translateY(-50%);
         transform: translateY(-50%); }
       .sidebar-section .faq-wrapper .faq-accordion .card .card-header .btn:not(.collapsed) {
-        color: #ffbe30;
+        color: #1272c1;
         background-color: #ffffff;
         -webkit-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
         box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1); }
         .sidebar-section .faq-wrapper .faq-accordion .card .card-header .btn:not(.collapsed):after {
           content: '\f0ab';
-          color: #ffbe30; }
+          color: #1272c1; }
       .sidebar-section .faq-wrapper .faq-accordion .card .card-header .btn:hover {
         color: #ffbe30;
         text-decoration: none; }
@@ -6042,7 +6042,7 @@ button {
   .event-details-section .event-details .event-title .tag-item i {
     margin-right: 5px;
     margin-bottom: 5px;
-    color: #ffbe30; }
+    color: #1272c1; }
 
 .event-details-section .event-details .event-title .event-title {
   margin: 0px;
@@ -6122,7 +6122,7 @@ button {
       border-radius: 100%;
       color: #ffffff;
       font-size: 18px;
-      background-color: #ffbe30; }
+      background-color: #1272c1; }
     .event-details-section .event-details .event-info-list ul li .event-content {
       display: table;
       padding-left: 15px; }
@@ -6458,7 +6458,7 @@ button {
       color: #878787;
       font-size: 14px; }
     .event-details-section .reviewer-comment-wrapper .comment-bar .comment-content .admin-name .rateing-star ul .rated {
-      color: #ffbe30; }
+      color: #1272c1; }
     .event-details-section .reviewer-comment-wrapper .comment-bar .comment-content .admin-name .name a {
       font-weight: 700;
       color: #333333;
@@ -6695,7 +6695,7 @@ button {
 
 .blog-section .tag {
   font-weight: 600;
-  color: #ffbe30;
+  color:#1272c1;
   font-size: 14px;
   text-transform: capitalize; }
 
@@ -6726,10 +6726,10 @@ button {
     content: '';
     position: absolute;
     border-radius: 3px;
-    background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-    background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-    background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-    background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+    background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+    background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+    background: -o-linear-gradient(top left, #1272c1, #015ba6);
+    background: linear-gradient(to bottom right, #1272c1, #015ba6);
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
