--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,7 +539,7 @@ textarea {
   color: #878787; }
 
 .yellow-color {
-  color: #ed1c24; }
+   }
 
 .orange-color {
   color: #ff3e00; }
@@ -2654,10 +2654,10 @@ button {
     transition: all 0.3s ease-in-out; }
     .testimonial5-section .item .quote-icon i {
       font-size: 54px;
-      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
-      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
-      background: -o-linear-gradient(top left, #1272c1, #015ba6);
-      background: linear-gradient(to bottom right, #1272c1, #015ba6);
+      background: -webkit-gradient(linear, left top, right bottom, from(#ffffff), to(#ffffff));
+      background: -webkit-linear-gradient(top left, #ffffff, #ffffff);
+      background: -o-linear-gradient(top left, #ffffff, #ffffff);
+      background: linear-gradient(to bottom right, #ffffff, #ffffff);
       -webkit-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
@@ -2666,12 +2666,12 @@ button {
   .testimonial5-section .item .clients-comment {
     font-weight: 700;
     line-height: 30px;
-    color: #333333;
+    color: #ffffff;
     margin-bottom: 50px;
     font-size: 18px; }
   .testimonial5-section .item .client-info .client-name {
     font-weight: 800;
-    color: #1272c1;
+    color: #ffffff;
     font-size: 24px; }
 
 .testimonial5-section .owl-theme .owl-nav .owl-next,
@@ -3587,10 +3587,10 @@ button {
         left: 0px;
         right: 0px;
         bottom: 0px;
-        background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(rgba(255, 190, 48, 0.8)));
-        background: -webkit-linear-gradient(top left, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8));
-        background: -o-linear-gradient(top left, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8));
-        background: linear-gradient(to bottom right, rgba(255, 62, 0, 0.8), rgba(255, 190, 48, 0.8)); }
+        background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+        background: -webkit-linear-gradient(#1272c1, rgb(2,0,36));
+        background: -o-linear-gradient(#1272c1, rgb(2,0,36));
+        background: linear-gradient(#1272c1, rgb(2,0,36)); }
       .event-gallery-section .grid-item a:after {
         top: 50%;
         left: 50%;
@@ -4255,7 +4255,7 @@ button {
         font-size: 24px; }
       .event-advertisement-section .event-item .event-content .event-title .ticket-price {
         font-weight: 700;
-        color: #ffbe30; }
+         }
     .event-advertisement-section .event-item .event-content .event-info ul {
       width: 100%;
       display: table; }
@@ -4381,10 +4381,10 @@ button {
       text-align: center;
       position: absolute;
       color: #ffffff;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6); }
       .event-section .tab-content .event-item2 .event-image .post-date .date {
         font-weight: 900;
         font-size: 24px;
@@ -4404,11 +4404,11 @@ button {
         content: '';
         height: 100%;
         position: absolute;
-        background-color: #ffbe30; }
+        background-color: #015ba6; }
       .event-section .tab-content .event-item2 .event-content .event-title .title {
         margin: 0px;
         font-weight: 900;
-        color: red;
+        color: #1272c1;
         font-size: 24px; }
     .event-section .tab-content .event-item2 .event-content .event-post-meta ul li {
       margin-bottom: 5px;
@@ -4444,10 +4444,10 @@ button {
         content: '';
         position: absolute;
         border-radius: 30px;
-        background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-        background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+        background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+        background: -webkit-linear-gradient(top left,#1272c1, #015ba6);
+        background: -o-linear-gradient(top left, #1272c1, #015ba6);
+        background: linear-gradient(to bottom right, #1272c1, #015ba6);
         -webkit-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out; }
@@ -4457,7 +4457,7 @@ button {
         .event-section .tab-content .event-item2 .event-content .tickets-details-btn:hover:before {
           opacity: 1; }
   .event-section .tab-content .event-item2:hover {
-    border-color: #ffbe30; }
+    border-color: #1272c1; }
 
 .event-section .tab-content .pagination ul {
   margin: 50px auto 0px; }
@@ -4491,16 +4491,16 @@ button {
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     border-left: 3px solid #f7f7f7;
     border-right: 3px solid #f7f7f7; }
     .homepage3 .testimonial5-section .item .quote-icon i {
       font-size: 48px;
       line-height: 66px;
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6);
       -webkit-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
@@ -4511,7 +4511,7 @@ button {
       left: -59px;
       width: 51px;
       content: '';
-      z-index: -1;
+      z-index: 99;
       height: 51px;
       position: absolute;
       border-radius: 8px;
@@ -4757,10 +4757,10 @@ button {
         z-index: -1;
         content: '';
         position: absolute;
-        background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-        background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-        background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+        background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+        background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+        background: -o-linear-gradient(top left, #1272c1, #015ba6);
+        background: linear-gradient(to bottom right, #1272c1, #015ba6);
         -webkit-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out; }
@@ -4783,10 +4783,10 @@ button {
         .about-section2 .services-list ul li a .icon i {
           font-size: 48px;
           line-height: 66px;
-          background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-          background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-          background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-          background: linear-gradient(to bottom right, #ff3e00, #ffbe30);
+          background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+          background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+          background: -o-linear-gradient(top left, #1272c1, #015ba6);
+          background: linear-gradient(to bottom right, #1272c1, #015ba6);
           -webkit-transition: all 0.3s ease-in-out;
           -o-transition: all 0.3s ease-in-out;
           transition: all 0.3s ease-in-out;
@@ -6607,7 +6607,7 @@ button {
           font-weight: 900; }
       .service-section .service-wrapper .service-item .service-content .service-title .service-price {
         font-weight: 900;
-        color: #ffbe30; }
+        color: #1272c1; }
     .service-section .service-wrapper .service-item .service-content .service-type-list ul {
       width: 100%;
       margin: 0px;
@@ -6641,14 +6641,14 @@ button {
       font-weight: 700;
       padding: 12px 35px;
       border-radius: 30px;
-      color: #ffbe30;
+      color: #ed1c24;
       font-size: 14px;
       text-transform: uppercase;
       background-color: #ffffff;
-      border: 3px solid #ffbe30; }
+      border: 3px solid #ed1c24; }
       .service-section .service-wrapper .service-item .service-content .conference-btn:hover {
         color: #ffffff;
-        background-color: #ffbe30; }
+        background-color: #ed1c24; }
 
 /* service page - end
 ==================================================================================================== */
