--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ textarea {
 /* padding - margin setting - start 
 ================================================== */
 .sec-ptb-100 {
-  padding: 286px 0px; }
+  padding: 100px 0px; }
 
 .mb-15 {
   margin-bottom: 15px; }
@@ -402,7 +402,7 @@ textarea {
     padding: 0px;
     font-size: 48px;
     font-weight: 400;
-    color: #333333; }
+    color: #ffffff; }
     .section-title .big-title strong {
       font-weight: 900; }
 
