--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,7 +402,7 @@ textarea {
     padding: 0px;
     font-size: 48px;
     font-weight: 400;
-    color: #ffffff; }
+    color: #1272c1; }
     .section-title .big-title strong {
       font-weight: 900; }
 
@@ -2449,7 +2449,7 @@ button {
       -webkit-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out;
-      background-color: #ffbe30; }
+      background-color: #1272c1; }
   .slide-section .owl-theme .owl-dots .owl-dot.active {
     font-size: 30px; }
     .slide-section .owl-theme .owl-dots .owl-dot.active:after {
@@ -2725,7 +2725,7 @@ button {
   margin-top: 50px; }
   .testimonial5-section .owl-theme .owl-dots .owl-dot.active span,
   .testimonial5-section .owl-theme .owl-dots .owl-dot:hover span {
-    background: #ffbe30; }
+    background: #1272c1; }
 
 /* testimonial section - end
 ==================================================================================================== */
@@ -5232,15 +5232,15 @@ button {
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
     .our-management-section .owl-theme .owl-dots button:hover span {
-      background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-      background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-      background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+      background: -webkit-gradient(linear, left top, right bottom, from(#1272c1), to(#015ba6));
+      background: -webkit-linear-gradient(top left, #1272c1, #015ba6);
+      background: -o-linear-gradient(top left, #1272c1, #015ba6);
+      background: linear-gradient(to bottom right, #1272c1, #015ba6); }
   .our-management-section .owl-theme .owl-dots .active span {
-    background: -webkit-gradient(linear, left top, right bottom, from(#ff3e00), to(#ffbe30));
-    background: -webkit-linear-gradient(top left, #ff3e00, #ffbe30);
-    background: -o-linear-gradient(top left, #ff3e00, #ffbe30);
-    background: linear-gradient(to bottom right, #ff3e00, #ffbe30); }
+    background: -webkit-gradient(linear, left top, right bottom, from(#015ba6), to(#1272c1));
+    background: -webkit-linear-gradient(top left, #015ba6, #1272c1);
+    background: -o-linear-gradient(top left, #015ba6, #1272c1);
+    background: linear-gradient(to bottom right, #015ba6, #1272c1); }
 
 .upcomming-event-section3 .section-title {
   padding: 0px 120px; }
