--- a/RGB-admin/login/style.css
+++ b/RGB-admin/login/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans:600&display=swap');
 body {
-  color: #fff;
+  color: rgb(255, 255, 255);
   font: 87.5%/1.5em 'Open Sans', sans-serif;
 	background:url(img/bg.jpg)no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -17,13 +18,42 @@ height:370px;
   left: 48%;
   margin: -184px 0px 0px -155px;
   background: rgba(0, 0, 0, 0.685);
-  padding: 15px 25px;
+  padding: 50px 75px;
   border-radius: 5px;
   box-shadow: 0px 1px 0px rgba(0,0,0,0.6),inset 0px 1px 0px rgba(255,255,255,0.04);
 }
 
 .form-item {
 width:100%;
+}
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+#content{
+	width: 50%;
+	justify-content: center;
+	align-items: center;
+	margin: 20px auto;
+	border: 1px solid #cbcbcb;
+}
+form{
+	width: 50%;
+	margin: 20px auto;
+}
+
+#display-image{
+	width: 100%;
+	justify-content: center;
+	padding: 5px;
+	margin: 15px;
+}
+img{
+	margin: 5px;
+	width: 350px;
+	height: 250px;
 }
 
 
@@ -108,3 +138,119 @@ input[type='text']{
 .reminder a:hover {
   color: #cab6bf;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+.sidebar{
+  position: fixed;
+  width: 240px;
+  left: -240px;
+  height: 100%;
+  background: #1e1e1e;
+  transition: all .5s ease;
+}
+.sidebar header{
+  font-size: 28px;
+  color: white;
+  line-height: 70px;
+  text-align: center;
+  background: #1b1b1b;
+  user-select: none;
+  font-family: 'Montserrat', sans-serif;
+}
+.sidebar a{
+  display: block;
+  height: 65px;
+  width: 100%;
+  color: white;
+  line-height: 65px;
+  padding-left: 30px;
+  box-sizing: border-box;
+  border-bottom: 1px solid black;
+  border-top: 1px solid rgba(255,255,255,.1);
+  border-left: 5px solid transparent;
+  font-family: 'Open Sans', sans-serif;
+  transition: all .5s ease;
+}
+a.active,a:hover{
+  border-left: 5px solid #b93632;
+  color: #b93632;
+}
+.sidebar a i{
+  font-size: 23px;
+  margin-right: 16px;
+}
+.sidebar a span{
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+#check{
+  display: none;
+}
+label #btn,label #cancel{
+  position: absolute;
+  cursor: pointer;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #262626;
+  margin: 15px 30px;
+  font-size: 29px;
+  background: #262626;
+  height: 45px;
+  width: 45px;
+  text-align: center;
+  line-height: 45px;
+  transition: all .5s ease;
+}
+label #cancel{
+  opacity: 0;
+  visibility: hidden;
+}
+#check:checked ~ .sidebar{
+  left: 0;
+}
+#check:checked ~ label #btn{
+  margin-left: 245px;
+  opacity: 0;
+  visibility: hidden;
+}
+#check:checked ~ label #cancel{
+  margin-left: 245px;
+  opacity: 1;
+  visibility: visible;
+}
+@media(max-width : 860px){
+  .sidebar{
+    height: auto;
+    width: 70px;
+    left: 0;
+    margin: 100px 0;
+  }
+  header,#btn,#cancel{
+    display: none;
+  }
+  span{
+    position: absolute;
+    margin-left: 23px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .sidebar a{
+    height: 60px;
+  }
+  .sidebar a i{
+    margin-left: -10px;
+  }
+  a:hover {
+    width: 200px;
+    background: inherit;
+  }
+  .sidebar a:hover span{
+    opacity: 1;
+    visibility: visible;
+  }
+}
+/* Don't Forget to Subscribe our Channel[CodingNepal] */
